--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
     "@remix-run/node": "^2.13.1",
     "@remix-run/react": "^2.13.1",
+    "classnames": "^2.5.1",
+    "isbot": "^4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -30,6 +33,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.38",
+    "prettier": "3.3.3",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
