add pdf files preview

--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/page-navigation": "^3.12.0",
+    "@react-pdf-viewer/thumbnail": "^3.12.0",
     "@remix-run/node": "^2.13.1",
     "@remix-run/react": "^2.13.1",
     "classnames": "^2.5.1",
     "isbot": "^4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-pdf": "^9.1.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.13.1",
